# dodb

./: CMakeLists.txt  Makefile  README.md  auto-test.sh  bound_simulation.ipynb  init_ubuntu16.04.sh  init_ubuntu18.04.sh  install_boost.sh  libsgx-enclave-common_2.3.101.46683-1_amd64.deb  plot.py
App/: App.cpp
Common/: AES.cpp  definitions.cpp  definitions.h  hll.cpp  hll.h
Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h
benchmark/: hundun_singlethread_dell_log.txt  hundun_singlethread_log.txt  oblidb_backup.txt  oblidb_dell.txt  opaque_dell.txt  opaque_log_backup.txt  usenix_singlethread_log.txt
benchmark/opaque/: Benchmark.scala  README.md  build.sbt
cmake/: FindSGX.cmake
